Add surveillance eye animation

--- a/surveillance.html
+++ b/surveillance.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Alarmcentrale Hero Animation</title>
+    <title>Surveillance Eye Animation</title>
     <link rel="stylesheet" href="style.css">
     <style>
-        body { margin: 0; overflow: hidden; background-color: #f0f0f0; } /* Light gray bg to verify transparency */
+        body { margin: 0; overflow: hidden; background-color: #000; } /* Dark bg for the eye */
         #hero-canvas {
             width: 100vw;
             height: 100vh;
@@ -24,8 +24,6 @@
 </head>
 <body>
     <div id="hero-canvas"></div>
-    <script type="module" src="animations/alarmcentrale.js"></script>
+    <script type="module" src="animations/surveillance.js"></script>
 </body>
 </html>
-
-
