feat: add home page particle animation
- Create animations/home.js with abstract stopwatch/time ring animation
- Update index.html to use the new home animation

--- a/index.html
+++ b/index.html
@@ -24,8 +24,13 @@
 </head>
 <body>
     <div id="hero-canvas"></div>
-    <script type="module" src="animations/alarmcentrale.js"></script>
+    <script type="module" src="animations/home.js"></script>
 </body>
 </html>
+
+
+
+
+
 
 
